--- a/.github/workflows/students_check.yaml
+++ b/.github/workflows/students_check.yaml
@@ -66,6 +66,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: run
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v5
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
       - name: Expose git commit data
         uses: rlespinasse/git-commit-data-action@v1
       - name: Download logs
@@ -74,7 +78,7 @@ jobs:
           name: logs
       - name: Check output logs
         run: |
-          response_code=$(curl -o /dev/null -w '%{http_code}\n' -X POST -H "Content-Type: application/json" -d "{\"group_ids\": [\"Z-31\", \"Z-32\"], \"assignment_id\": \"Singleton\", \"commiter\": \"${{env.GIT_COMMIT_AUTHOR_NAME}}\", \"output\": \"$(cat output.txt)\"}" -L http://${{secrets.CHECKER_HOST}}/submit -s)
+          response_code=$(curl -o /dev/null -w '%{http_code}\n' -X POST -H "Content-Type: application/json" -d "{\"group_ids\": [\"Z-31\", \"Z-32\"], \"assignment_id\": \"Singleton\", \"commiter\": \"${{env.GIT_COMMIT_AUTHOR}}\", \"output\": \"$(cat output.txt)\"}" -L http://${{secrets.CHECKER_HOST}}/submit -s)
           if [[ "$response_code" -eq 200 ]]; then
             exit 0
           else
